<resources>
    <string name="app_name">金色网抑云</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="text_phone">手机号登录</string>
    <string name="text_email">邮箱登录</string>
    <string name="login">登录</string>
    <string name="sure">确认</string>
    <string name="verification">忘记密码</string>
    <string name="get_verification">获取验证码</string>
    <string name="go_to_register">没有账号？去注册</string>
    <string name="register">注册</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="input_verification">请输入验证码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_playlist">我的歌单</string>
    <string name="to_playlist">歌单</string>
    <string name="please_inpuit">请输入关键词</string>
    <string name="record">搜索历史</string>
    <string name="details_1">基本信息</string>
    <string name="age">村龄:</string>
    <string name="fan">粉丝:</string>
    <string name="focus">关注:</string>
    <string name="detail_2">等级信息</string>
    <string name="level">等级:</string>
    <string name="to_listen">听歌量:</string>
    <string name="to_login">登录天数:</string>
    <string name="detail_3">音乐品味</string>
    <string name="total_listen">累计听歌:</string>
    <string name="total_playlist">总共歌单:</string>
    <string name="login_out">退出登录</string>
    <string name="songs">单曲</string>
    <string name="record_play">最近播放</string>
    <string name="cloud">云盘</string>
    <string name="friend">我的好友</string>
    <string name="play_all">播放全部</string>
</resources>