<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".User_detail_Activity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textColor="#000"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_detail"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/text_details_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_1"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_details_1"
            app:layout_constraintLeft_toLeftOf="@id/text_details_1"/>
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_age"
            app:layout_constraintLeft_toRightOf="@id/text_age"/>
        <TextView
            android:id="@+id/text_fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fan"
            android:textSize="13sp"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/text_age"
            app:layout_constraintLeft_toLeftOf="@id/text_age"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_fan"
            app:layout_constraintLeft_toRightOf="@id/text_fan"/>
        <TextView
            android:id="@+id/text_focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_fan"
            app:layout_constraintLeft_toRightOf="@id/fan"/>
        <TextView
            android:id="@+id/focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_focus"
            app:layout_constraintLeft_toRightOf="@id/text_focus"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_detail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/con_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/text_details_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_2"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/text_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_details_2"
            app:layout_constraintLeft_toLeftOf="@id/text_details_2"/>
        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_level"
            app:layout_constraintLeft_toRightOf="@id/text_level"/>
        <TextView
            android:id="@+id/text_tolisten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_listen"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/text_level"
            app:layout_constraintLeft_toLeftOf="@id/text_level"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tolisten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_tolisten"
            app:layout_constraintLeft_toRightOf="@id/text_tolisten"/>
        <TextView
            android:id="@+id/text_tologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_login"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_tolisten"
            app:layout_constraintLeft_toRightOf="@id/tolisten"/>
        <TextView
            android:id="@+id/tologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_tolisten"
            app:layout_constraintLeft_toRightOf="@id/text_tologin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/con_3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_detail"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintTop_toBottomOf="@id/con_2"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/text_details_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_3"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/text_totallisten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_listen"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/text_details_3"
            app:layout_constraintLeft_toLeftOf="@id/text_details_3" />
        <TextView
            android:id="@+id/totallisten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_totallisten"
            app:layout_constraintLeft_toRightOf="@id/text_totallisten"/>
        <TextView
            android:id="@+id/text_totalplaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_playlist"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/text_totallisten"
            app:layout_constraintLeft_toLeftOf="@id/text_totallisten"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/totalplaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/text_totalplaylist"
            app:layout_constraintLeft_toRightOf="@id/text_totalplaylist"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape_button"
        android:text="@string/login_out"
        android:textColor="#FF0000"
        android:onClick="login_out"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/con_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>