<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="250dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edittext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon_id" />

        <EditText
            android:id="@+id/edittext_login_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="@drawable/shape_edittext_inside"
            android:hint="@string/hint_email"
            android:textColor="#fff"
            android:maxLines="1"
            android:maxLength="30"
            android:textSize="12sp"
            android:textColorHint="#fff"/>
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearlayout_upto_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edittext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="355dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/edittext_login_password_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="@drawable/shape_edittext_inside"
            android:hint="@string/hint_password"
            android:textColor="#fff"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="30"
            android:textSize="12sp"
            android:textColorHint="#fff"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_email_login_1"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:text="@string/login"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:background="@drawable/shape_button"
        android:layout_marginBottom="270dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:indeterminateTint="#fff"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>